--- a/src/components/Sections/CtaSection/CtaSection.astro
+++ b/src/components/Sections/CtaSection/CtaSection.astro
@@ -2,24 +2,21 @@
 import Container from "@components/Container.astro";
 import "./cta.css"
 import { Icon } from "astro-icon/components";
-import { Picture } from "astro:assets";
-import {getImageUrl} from "@utils/pocketbase";
+
 import CustomImage from "@components/CustomImage.astro";
-const { data, core_values } = Astro.props;
-
-const hasImage = data.expand?.image?.file;
-
+import Cards from "@components/Cards/Cards.astro";
+const { data } = Astro.props;
 ---
 
 <div class="cta full-width">
     <Container>
-        <div class="cta__wrapper" data-highlight={data.highlight}>
+        <div class="cta__wrapper">
             <div class="cta__content">
                 <div class="cta__heading">
                     {
-                        core_values && (
+                        data.core_values && (
                             <ul class="cta__core_values">
-                                {core_values.split(",").map((value: any) => (
+                                {data.core_values.split(",").map((value: any) => (
                                     <li>
                                         <Icon
                                             name="mdi:check-bold"
@@ -34,13 +31,19 @@ const hasImage = data.expand?.image?.file;
                     }
                     <h2>{data.title}</h2>
                     <slot set:html={data.content} />
+                    {data.expand.section_grid && (
+                        <Cards card_type={data.grid_type} cards={data.expand.section_grid} data={data} />
+                    )}
+                    <a href="#contact-us" class="cta__link btn btn-md btn-secondary">Get in Touch</a>
                 </div>
             </div>
 
             {
-                hasImage && (
+                data.expand.image.length > 0 && (
                     <div class="cta__image">
-                        <CustomImage image={data.expand.image} classlist="content_section__image" size="medium" fit={data.expand.image.fit} position={data.expand.image.position}/>
+                        {data.expand.image.map((image: any) => (
+                            <CustomImage image={image} classlist="content_section__image" size="large" fit={image.fit} position={image.position}/>
+                        ))}
                     </div>
                 )
             }
