--- a/src/components/Sections/Stats/ColorfulStats/ColorfulStats.astro
+++ b/src/components/Sections/Stats/ColorfulStats/ColorfulStats.astro
@@ -17,12 +17,12 @@ import Container from "@components/Container.astro";
 const {cards, data} = Astro.props
 
 const cardStyles = [
-    { bg: 'var(--clr-primary)' },
-    { bg: 'var(--clr-tertiary)' },
-    { bg: 'var(--clr-secondary)' },
-    { bg: 'var(--clr-tertiary)' },
-    { bg: 'var(--clr-primary)' },
-    { bg: 'var(--clr-secondary)' },
+    { bg: 'var(--clr-primary-darker)' },
+    { bg: 'var(--clr-tertiary-darker)' },
+    { bg: 'var(--clr-secondary-darker)' },
+    { bg: 'var(--clr-tertiary-darker)' },
+    { bg: 'var(--clr-primary-darker)' },
+    { bg: 'var(--clr-secondary-darker)' },
 ];
 ---
 
