--- a/src/components/Footer/TinyFooter/TinyFooter.astro
+++ b/src/components/Footer/TinyFooter/TinyFooter.astro
@@ -14,7 +14,7 @@ const { title, parent_site_title, parent_site_url } = Astro.props;
     <Container>
         <div class="footer__content">
             <p>
-                © {new Date().getFullYear()}
+                &copy; {new Date().getFullYear()}
                 {title.split("|")[0].trim()}. All Rights Reserved.
             </p>
             <p class="footer__logo">
