--- a/src/components/Hero/Gradient/styles.css
+++ b/src/components/Hero/Gradient/styles.css
@@ -1,5 +1,5 @@
 .gg-hero {
-    background: linear-gradient(180deg, var(--clr-primary-darker) 0%, var(--clr-secondary-darker) 100%);
+    background: linear-gradient(180deg, var(--clr-primary-dark) 0%, var(--clr-secondary-dark) 100%);
     min-height: 100vh;
     padding: 2rem 0;
     display: flex;
@@ -24,7 +24,7 @@
     background: linear-gradient(
         90deg,
         transparent 0%,
-        var(--clr-primary) 50%,
+        var(--clr-tertiary-dark) 50%,
         transparent 100%
     );
     filter: blur(100px);
