--- a/src/components/Hero/Overflow/hero.css
+++ b/src/components/Hero/Overflow/hero.css
@@ -1,49 +1,56 @@
 .overflow_hero {
-    position: relative;
-    
+    --col-count: 6;
+    --max-height: 600px;
     display: grid;
-    grid-template-areas: "stack";
-    min-height: 100vh;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(var(--col-count), calc(var(--max-height) / var(--col-count)));
 }
 
-.overflow_hero > * {
-    grid-area: stack;
+.overflow_hero__content h1 {
+    font-size: var(--heading-large);
+    max-width: 50ch;
+}
+
+.overflow_hero__content {
+    color: var(--clr-neutral-50);
+}
+.overflow_hero__overlay {
+    grid-column:  1 / -1;
+    grid-row: 1 / -1;
+    z-index: 2;
+
+    width: 100%;
+    height: 100%;
+    background: hsl(90 15% 15% / 0.65);
 }
 
 .overflow_hero__image {
+    position: relative;
+    isolation: isolate;
+
     width: 100%;
     height: 100%;
-    object-fit: cover;
-    z-index: 1;
+
+    grid-column: 1 / -1;
+    grid-row: 1 / -1;
+
+    z-index: -1;
 }
 
-.overflow_hero__overlay {
-    z-index: 2;
-    background: linear-gradient(
-        180deg,
-        var(--clr-primary) 0%,
-        rgba(0, 0, 0, 0.4) 35%,
-        rgba(0, 0, 0, 0.6) 65%,
-        var(--clr-primary-darker) 100%
-    );
-}
+.overflow_hero>.content-grid {
+    grid-column: 1 / -1;
+    grid-row: -4 / -1;
 
-.overflow_hero__wrapper {
-    align-self: end;
-    justify-self: start;
-    padding-block: clamp(2rem, 5vw, 4rem);
-    width: min(100% - 2rem, 65ch);
-    margin-inline: auto;
+    /* width: 100%; */
+    height: 100%;
+
+    align-items: center;
     z-index: 3;
 }
 
 .overflow_hero__content {
-    color: white;
-    text-align: left;
+    max-width: 65ch;
 }
+@media (min-width: 768px) {
 
-@media (max-width: 768px) {
-    .overflow_hero__wrapper {
-        padding-block: clamp(1.5rem, 3vw, 2rem);
-    }
 }
