--- a/src/components/Hero/VerticalWithImage/hero.css
+++ b/src/components/Hero/VerticalWithImage/hero.css
@@ -1,5 +1,5 @@
 .vertical_hero {
-    background-color: var(--clr-primary);
+    background-color: var(--clr-primary-dark);
 }
 .vertical_hero__wrapper {
     display: grid;
