--- a/src/components/Sections/Stats/ColorfulStats/stats.css
+++ b/src/components/Sections/Stats/ColorfulStats/stats.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: row;
   gap: var(--size-4);
-  align-items: flex-start;
+  align-items: center;
   justify-content: flex-start;
   border-radius: var(--size-1);
   padding: var(--size-4);
@@ -58,7 +58,7 @@
 .simple-stats__header h2 {
   font-size: var(--heading-medium);
   font-weight: var(--heading-medium-weight);
-  color: var(--clr-tertiary);
+  color: var(--clr-primary-dark);
   line-height: 1;
   margin: 0;
 }
