--- a/src/components/Sections/Stats/StatsGrid/stats.css
+++ b/src/components/Sections/Stats/StatsGrid/stats.css
@@ -51,7 +51,7 @@
     border-radius: var(--size-2);
     padding: var(--size-2);
     color: var(--clr-tertiary-dark);
-    background-image: linear-gradient(to bottom,var(--clr-tertiary-lighter), var(--clr-tertiary-light));
+    background-image: linear-gradient(to bottom,var(--clr-tertiary-lighter), var(--clr-tertiary));
     border: 2px solid var(--clr-tertiary-lighter);
     box-shadow: var(--clr-tertiary-light) 0px 20px 25px -5px, var(--clr-tertiary-lighter) 0px 10px 10px -5px;
 }
